# practice_repo

./: .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  pyproject.toml
.github/workflows/: ci.yaml  opencode-reviewer.yaml  opencode.yaml
.opencode/agents/: adversarial-orchestrator.md  adversarial-reviewer.md  commit.md  git-getter.md  mon-agent.md  monagent.md  pr-reader.md  reviewer.md
src/booking/: booking_service.py  notification_service.py
src/message_bus/: message_bus.py
src/practicerepo/: app.py  models.py
src/workflows/: booking_orchestrator.py
tests/: conftest.py
tests/functional/: test_flows.py
tests/integration/: test_endpoints.py
tests/unit/: test_models.py
